--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,15 @@
 body{
     max-width: 570px;
     margin: auto;
+    background: rgba(255,255,255,0.7);
+    height: 100vh;
+}
+
+html{
+    background-image: url("bg.png");
+    background-color: #cccccc;
+    background-position: center top;
+    background-size: 200%;
 }
 
 input{
