--- a/css/style.css
+++ b/css/style.css
@@ -3,15 +3,17 @@ body{
     margin: auto;
     background: rgba(255,255,255,0.7);
     height: 100vh;
+    border-radius: 3%;
 }
 
 html{
     background-image: url("bg.png");
     background-color: #cccccc;
     background-position: center top;
-    background-size: 200%;
+    background-size: 350%;
 }
 
 input{
     text-align: center;
 }
+
